--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-multi-toogle",
-  "version": "1.0.0",
+  "version": "1.0.8",
   "description": "Made with create-react-library",
   "author": "jimx6",
   "license": "MIT",
@@ -12,7 +12,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs",
+    "build": "microbundle-crl --no-compress --format modern,cjs --css-modules false",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
